# RCL

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/appworld/: README.md  __init__.py  appworld_root.py  appworld_server.py  benchmark.py  evaluator.py
benchmarks/appworld/adapters/: appworld_client.py  system_adapter.py
benchmarks/appworld/playbooks/: seed_playbook.json
benchmarks/appworld/scripts/: run_baseline.py
benchmarks/browsecomp/: README.md  __init__.py  benchmark.py  evaluator.py
benchmarks/browsecomp/adapters/: browsecomp_client.py  gemini_inference.py  system_adapter.py
benchmarks/browsecomp/scripts/: run_baseline.py
benchmarks/browsecomp/splits/: test_150.json  train_100.json  val_30.json
benchmarks/rewardbench2/: README.md  __init__.py  benchmark.py  evaluator.py
benchmarks/rewardbench2/adapters/: __init__.py  rewardbench2_client.py  system_adapter.py
benchmarks/rewardbench2/playbooks/: seed_playbook.json
benchmarks/rewardbench2/scripts/: create_splits.py  download_dataset.py  run_baseline.py  run_eval.py  run_training.py
benchmarks/rewardbench2/splits/: manifest.json  test.json  (+2 more)
rcl/: __init__.py
rcl/components/: __init__.py  inference.py  llm_client.py  mutator.py  perturber.py  reflector.py  trace_summarizer.py
rcl/core/: __init__.py  config.py  data_structures.py  interfaces.py  optimization_state.py  optimizer.py  replay_buffer.py  trace_writer.py
rcl/prompts/: __init__.py  mutator.py  reflector.py  trace_summarizer.py
scripts/: run_eval.py  run_training.py  run_validation_sweep.py
